<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editTextNumberOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_summand"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextNumberTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_summand"
        android:inputType="number" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <TextView android:id="@+id/textViewResultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    
    <Button
        android:visibility="gone"
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

</LinearLayout>